; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloopmanip.c_loop_delete_branch_edge.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloopmanip.c_loop_delete_branch_edge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_12__ = type { i32, %struct.TYPE_13__*, %struct.TYPE_13__* }
%struct.TYPE_14__ = type { i32 }

@EXIT_BLOCK_PTR = common dso_local global %struct.TYPE_13__* null, align 8
@EDGE_IRREDUCIBLE_LOOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_12__*, i32)* @loop_delete_branch_edge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loop_delete_branch_edge(%struct.TYPE_12__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca %struct.TYPE_13__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %10, i32 0, i32 2
  %12 = load %struct.TYPE_13__*, %struct.TYPE_13__** %11, align 8
  store %struct.TYPE_13__* %12, %struct.TYPE_13__** %6, align 8
  %13 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @EDGE_COUNT(i32 %15)
  %17 = icmp sgt i32 %16, 1
  %18 = zext i1 %17 to i32
  %19 = call i32 @gcc_assert(i32 %18)
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @EDGE_COUNT(i32 %22)
  %24 = icmp sgt i32 %23, 2
  br i1 %24, label %25, label %26

25:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %81

26:                                               ; preds = %2
  %27 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %28 = call i32 @BB_END(%struct.TYPE_13__* %27)
  %29 = call i32 @any_condjump_p(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %81

32:                                               ; preds = %26
  %33 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %34 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %35 = call %struct.TYPE_12__* @EDGE_SUCC(%struct.TYPE_13__* %34, i32 0)
  %36 = icmp eq %struct.TYPE_12__* %33, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %32
  %38 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %39 = call %struct.TYPE_12__* @EDGE_SUCC(%struct.TYPE_13__* %38, i32 1)
  br label %43

40:                                               ; preds = %32
  %41 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %42 = call %struct.TYPE_12__* @EDGE_SUCC(%struct.TYPE_13__* %41, i32 0)
  br label %43

43:                                               ; preds = %40, %37
  %44 = phi %struct.TYPE_12__* [ %39, %37 ], [ %42, %40 ]
  store %struct.TYPE_12__* %44, %struct.TYPE_12__** %9, align 8
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %45, i32 0, i32 1
  %47 = load %struct.TYPE_13__*, %struct.TYPE_13__** %46, align 8
  store %struct.TYPE_13__* %47, %struct.TYPE_13__** %7, align 8
  %48 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %49 = load %struct.TYPE_13__*, %struct.TYPE_13__** @EXIT_BLOCK_PTR, align 8
  %50 = icmp eq %struct.TYPE_13__* %48, %49
  br i1 %50, label %51, label %52

51:                                               ; preds = %43
  store i32 0, i32* %3, align 4
  br label %81

52:                                               ; preds = %43
  %53 = load i32, i32* %5, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %52
  store i32 1, i32* %3, align 4
  br label %81

56:                                               ; preds = %52
  %57 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %58 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 8
  %60 = load i32, i32* @EDGE_IRREDUCIBLE_LOOP, align 4
  %61 = and i32 %59, %60
  store i32 %61, i32* %8, align 4
  %62 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %63 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %64 = call i32 @redirect_edge_and_branch(%struct.TYPE_12__* %62, %struct.TYPE_13__* %63)
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %67, label %66

66:                                               ; preds = %56
  store i32 0, i32* %3, align 4
  br label %81

67:                                               ; preds = %56
  %68 = load i32, i32* @EDGE_IRREDUCIBLE_LOOP, align 4
  %69 = xor i32 %68, -1
  %70 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %71 = call %struct.TYPE_14__* @single_succ_edge(%struct.TYPE_13__* %70)
  %72 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 4
  %74 = and i32 %73, %69
  store i32 %74, i32* %72, align 4
  %75 = load i32, i32* %8, align 4
  %76 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %77 = call %struct.TYPE_14__* @single_succ_edge(%struct.TYPE_13__* %76)
  %78 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = or i32 %79, %75
  store i32 %80, i32* %78, align 4
  store i32 1, i32* %3, align 4
  br label %81

81:                                               ; preds = %67, %66, %55, %51, %31, %25
  %82 = load i32, i32* %3, align 4
  ret i32 %82
}

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i32 @EDGE_COUNT(i32) #1

declare dso_local i32 @any_condjump_p(i32) #1

declare dso_local i32 @BB_END(%struct.TYPE_13__*) #1

declare dso_local %struct.TYPE_12__* @EDGE_SUCC(%struct.TYPE_13__*, i32) #1

declare dso_local i32 @redirect_edge_and_branch(%struct.TYPE_12__*, %struct.TYPE_13__*) #1

declare dso_local %struct.TYPE_14__* @single_succ_edge(%struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
